--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -46,12 +46,13 @@
     <EditText
         android:id="@+id/etName"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="30dp"
         android:layout_marginHorizontal="50dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/bg_et_design"
         android:drawableStart="@drawable/baseline_person_24"
         android:hint="Name"
+        android:textColorHint="@color/white"
         android:gravity="center"
         android:paddingStart="10dp"
         android:textSize="20sp"
@@ -61,12 +62,13 @@
     <EditText
         android:id="@+id/etEmail"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="30dp"
         android:layout_marginHorizontal="50dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/bg_et_design"
         android:drawableStart="@drawable/baseline_email_24"
         android:hint="Email"
+        android:textColorHint="@color/white"
         android:gravity="center"
         android:paddingStart="10dp"
         android:textSize="20sp"
@@ -77,12 +79,13 @@
     <EditText
         android:id="@+id/etPhone"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="30dp"
         android:layout_marginHorizontal="50dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/bg_et_design"
         android:drawableStart="@drawable/baseline_local_phone_24"
         android:hint="Phone"
+        android:textColorHint="@color/white"
         android:gravity="center"
         android:paddingStart="10dp"
         android:textSize="20sp"
@@ -93,13 +96,14 @@
     <EditText
         android:id="@+id/etIdCard"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="30dp"
         android:layout_marginHorizontal="50dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/bg_et_design"
         android:drawableStart="@drawable/baseline_perm_identity_24"
         android:drawableTint="@color/white"
         android:hint="ID Card Number"
+        android:textColorHint="@color/white"
         android:gravity="center"
         android:paddingStart="10dp"
         android:textSize="20sp"
@@ -110,12 +114,13 @@
     <EditText
         android:id="@+id/etPassword"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="30dp"
         android:layout_marginHorizontal="50dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/bg_et_design"
         android:drawableStart="@drawable/baseline_password_24"
         android:hint="Password"
+        android:textColorHint="@color/white"
         android:gravity="center"
         android:paddingStart="10dp"
         android:textSize="20sp"
@@ -126,7 +131,7 @@
     <EditText
         android:id="@+id/etConfirmPassword"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="30dp"
         android:layout_marginHorizontal="50dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/bg_et_design"
@@ -135,7 +140,35 @@
         android:gravity="center"
         android:paddingStart="10dp"
         android:textSize="20sp"
+        android:textColorHint="@color/white"
         app:layout_constraintTop_toBottomOf="@id/etPassword"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btnSignin"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/etConfirmPassword"
+        android:text="Done"
+        android:textSize="20sp"
+        app:cornerRadius="25dp"
+        android:backgroundTint="@color/blue"
+        android:layout_marginHorizontal="130dp"
+        android:layout_marginVertical="20dp" />
+    <TextView
+        android:id="@+id/tvMoney"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="money is motivation"
+        android:textColor="@color/white"
+        android:textSize="33sp"
+        android:layout_marginTop="80dp"
+        android:textStyle="italic"
+        android:fontFamily="cursive"
+        app:layout_constraintTop_toBottomOf="@id/etConfirmPassword"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
