--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -12,7 +12,6 @@ tools:context=".Ui.ActivitySplash">
         android:id="@+id/tvSignup"
         android:layout_width="270dp"
         android:layout_height="wrap_content"
-        android:gravity="left"
         android:text="A way to Come Out From Matrix"
         android:textColor="@color/white"
         android:textSize="30sp"
@@ -37,9 +36,9 @@ tools:context=".Ui.ActivitySplash">
         android:layout_height="270dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ivSplash1"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:src="@drawable/bg1"
-        android:layout_marginTop="250dp"/>
+     />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
